--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,7 +27,7 @@ install:
 build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
-  - C:\projects\julia\bin\julia -e "versioninfo();
+  - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.clone(\"https://github.com/wkearn/RasterIO.jl.git\"); Pkg.build(\"RasterIO\");
       Pkg.clone(pwd(), \"VAWTools\"); Pkg.build(\"VAWTools\")"
 
 test_script:
