--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ os:
   - linux
   - osx
 julia:
-  - 0.5
   - 0.6
   - nightly
 matrix:
@@ -15,7 +14,8 @@ notifications:
 # uncomment the following lines to override the default test script
 script:
  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
- - julia -e 'Pkg.clone("https://github.com/wkearn/RasterIO.jl.git"); Pkg.build("RasterIO"); Pkg.clone(pwd()); Pkg.build("VAWTools"); Pkg.test("VAWTools"; coverage=true)'
+ - julia -e 'Pkg.clone(pwd()); Pkg.build("VAWTools"); Pkg.test("VAWTools"; coverage=true)'
+ # - julia -e 'Pkg.clone("https://github.com/wkearn/RasterIO.jl.git"); Pkg.build("RasterIO"); Pkg.clone(pwd()); Pkg.build("VAWTools"); Pkg.test("VAWTools"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
   - julia -e 'cd(Pkg.dir("VAWTools")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
