--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,7 +1,5 @@
 environment:
   matrix:
-  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x86/0.5/julia-0.5-latest-win32.exe"
-  - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/0.5/julia-0.5-latest-win64.exe"
   - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x86/0.6/julia-0.6-latest-win32.exe"
   - JULIA_URL: "https://julialang-s3.julialang.org/bin/winnt/x64/0.6/julia-0.6-latest-win64.exe"
  #- JULIA_URL: "https://julialangnightlies-s3.julialang.org/bin/winnt/x86/julia-latest-win32.exe"
@@ -30,8 +28,9 @@ install:
 build_script:
 # Need to convert from shallow to complete for Pkg.clone to work
   - IF EXIST .git\shallow (git fetch --unshallow)
-  - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.clone(\"https://github.com/wkearn/RasterIO.jl.git\"); Pkg.build(\"RasterIO\");
-      Pkg.clone(pwd(), \"VAWTools\"); Pkg.build(\"VAWTools\")"
+  - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.clone(pwd(), \"VAWTools\"); Pkg.build(\"VAWTools\")"
+  # - C:\projects\julia\bin\julia -e "versioninfo(); Pkg.clone(\"https://github.com/wkearn/RasterIO.jl.git\"); Pkg.build(\"RasterIO\");
+  #     Pkg.clone(pwd(), \"VAWTools\"); Pkg.build(\"VAWTools\")"
 
 test_script:
   - C:\projects\julia\bin\julia -e "Pkg.test(\"VAWTools\")"
