--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,29 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia/
+#
+# https://github.com/invenia/Mocking.jl/blob/master/.travis.yml
 language: julia
 os:
   - linux
   - osx
 julia:
-  - 0.6
+  - 0.7
+  - 1.0
   - nightly
 matrix:
   allow_failures:
     - julia: nightly
 notifications:
   email: false
+# https://github.com/travis-ci/travis-ci/issues/4942
+git:
+  depth: 99999
 # uncomment the following lines to override the default test script
-script:
- - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
- - julia -e 'Pkg.clone(pwd()); Pkg.build("VAWTools"); Pkg.test("VAWTools"; coverage=true)'
- # - julia -e 'Pkg.clone("https://github.com/wkearn/RasterIO.jl.git"); Pkg.build("RasterIO"); Pkg.clone(pwd()); Pkg.build("VAWTools"); Pkg.test("VAWTools"; coverage=true)'
+#script:
+#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+#  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("Parameters"); Pkg.test("Parameters"; coverage=true)'
+## Documeter.jl
 after_success:
   # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("VAWTools")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  - julia -e 'using Pkg; cd(Pkg.dir("VAWTools")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  - julia -e 'cd(Pkg.dir("VAWTools")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'using Pkg; cd(Pkg.dir("VAWTools")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
